--- a/AppInstaller/app/src/main/res/layout/store_list_item.xml
+++ b/AppInstaller/app/src/main/res/layout/store_list_item.xml
@@ -14,7 +14,8 @@
         android:layout_height="48dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        tools:src="@drawable/ic_launcher_foreground" />
+        tools:src="@drawable/ic_launcher_foreground"
+        android:contentDescription="@null" />
 
     <LinearLayout
         android:layout_width="match_parent"
