--- a/AppInstaller/app/src/main/res/layout/fragment_app_details.xml
+++ b/AppInstaller/app/src/main/res/layout/fragment_app_details.xml
@@ -25,8 +25,8 @@
                 android:layout_height="96dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                tools:src="@mipmap/ic_launcher"
-                android:contentDescription="@null" />
+                android:contentDescription="@null"
+                tools:src="@mipmap/ic_launcher" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
