--- a/AppInstaller/app/src/main/res/layout/store_list_item.xml
+++ b/AppInstaller/app/src/main/res/layout/store_list_item.xml
@@ -14,8 +14,8 @@
         android:layout_height="48dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        tools:src="@drawable/ic_launcher_foreground"
-        android:contentDescription="@null" />
+        android:contentDescription="@null"
+        tools:src="@drawable/ic_launcher_foreground" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -44,6 +44,15 @@
                 android:layout_marginStart="20dp"
                 android:gravity="end"
                 android:text="@string/update_available_status"
+                android:textAlignment="gravity"
+                android:textColor="?attr/colorSecondary" />
+
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:gravity="end"
                 android:textAlignment="gravity"
                 android:textColor="?attr/colorSecondary" />
         </LinearLayout>
