Add Installer screen (simplified store/library/details screens)

--- a/AppInstaller/app/src/main/res/navigation/mobile_navigation.xml
+++ b/AppInstaller/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_store">
+    app:startDestination="@+id/navigation_installer">
+
+    <fragment
+        android:id="@+id/navigation_installer"
+        android:name="com.samples.appinstaller.InstallerFragment"
+        android:label="@string/title_store"
+        tools:layout="@layout/fragment_installer"></fragment>
 
     <fragment
         android:id="@+id/navigation_store"
