--- a/AppInstaller/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/AppInstaller/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,15 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_store"
+        android:id="@+id/navigation_installer"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_store" />
+
+    <item
+        android:id="@+id/navigation_store"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="Removed" />
 
     <item
         android:id="@+id/navigation_library"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_library" />
-
 
     <item
         android:id="@+id/navigation_settings"
