Clean unused resources
Reorganize fragments into specific packages
Catch errors when abandoning install sessions

--- a/AppInstaller/app/src/main/res/layout/fragment_library.xml
+++ b/AppInstaller/app/src/main/res/layout/fragment_library.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:paddingHorizontal="16dp"
-                android:text="To be able to use the store, we need to request the install permission to add apps to your device"
+                android:text="@string/permission_description"
                 android:textAppearance="?attr/textAppearanceBody2" />
 
             <Button
