--- a/AppInstaller/app/src/main/res/layout/library_list_item.xml
+++ b/AppInstaller/app/src/main/res/layout/library_list_item.xml
@@ -80,6 +80,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/cancel_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
