Add last updated time in library item layout

--- a/AppInstaller/app/src/main/res/layout/library_list_item.xml
+++ b/AppInstaller/app/src/main/res/layout/library_list_item.xml
@@ -59,6 +59,13 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceListItemSecondary"
                 tools:text="Company Inc" />
+
+            <TextView
+                android:id="@+id/last_updated_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?attr/textAppearanceListItemSecondary"
+                tools:text="2021-01-01 18:24" />
         </LinearLayout>
     </LinearLayout>
 
